Fix alignment for ISA summary

--- a/projects/plugins/boost/app/assets/src/js/features/image-size-analysis/recommendations-meta/recommendations-meta.module.scss
+++ b/projects/plugins/boost/app/assets/src/js/features/image-size-analysis/recommendations-meta/recommendations-meta.module.scss
@@ -32,12 +32,14 @@
 }
 
 .has-issues {
+	display: flex;
+	align-items: center;
 	color: var(--jp-orange-20);
 
 	svg {
-		width: 22px;
-		height: 22px;
-		top: 4px;
+		width: 1.2em;
+		height: 1.2em;
+		margin-right: 0.5em;
 		position: relative;
 	}
 }
